--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # Обновлено с v2 на v3
 
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -31,13 +31,19 @@ jobs:
       - name: Run tests
         run: go test ./...
 
+      # Новый шаг для вывода логов в случае ошибки тестов
+      - name: Show logs if tests fail
+        if: failure()
+        run: |
+          echo "Linting or tests failed. Check logs above for details."
+
   docker_build_and_push:
     runs-on: ubuntu-latest
     needs: lint_and_test
 
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # Обновлено с v2 на v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
